<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_username_title" />

            <EditText
                android:id="@+id/adduser_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="numberDecimal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_password_title" />

            <EditText
                android:id="@+id/adduser_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_1_title" />

            <EditText
                android:id="@+id/adduser_myvs_1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_2_title" />

            <EditText
                android:id="@+id/adduser_myvs_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_3_title" />

            <EditText
                android:id="@+id/adduser_myvs_3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_4_title" />

            <EditText
                android:id="@+id/adduser_myvs_4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_13a_title" />

            <EditText
                android:id="@+id/adduser_myvs_13a"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_13b_title" />

            <EditText
                android:id="@+id/adduser_myvs_13b"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_13c_title" />

            <EditText
                android:id="@+id/adduser_myvs_13c"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_height"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_myvs_14_title" />

            <EditText
                android:id="@+id/adduser_myvs_14"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="text" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>